FFM (#54)
* Checkpointing all tests and benches passing

TODO
- chase down memory leak
- cleanup

* Add back in dropped comments

* More correct cleaner, doesn't leave tombstone litter

* Generate uniffiRustCalls for primitives

Java (and Kotlin) have to autobox things to use the generic uniffi FFI converter (since generics require boxed values).
This technically makes for a super strange series of calls for uniffi calls:

`long→Long→Long→long→FFI→long→Long→Long→long` for a primitive add call for example.

From my benchmarking (after making these changes) it looks like the JIT is already optimizing those extra calls away,
but this changes makes it more correct by default instead of depending on the JIT always figuring the right thing out.

* Update README's to swap JNA for FFM info

* Fix CI run

* Fix the benchmark filtering

* Add extra test coverage:

- close() vs GC race doesn't mess things up under contention with the backpressure cleaner
- Arena\.global() memory stability (may come back to this one after thinking on global more)
- renabled the testsprites fixture from forever ago
- REUSABLE_STATUS segment zeroing doesn't corrupt error data between calls

* More tests, switch struct return to slab allocator

Which removes the known small memory leak. Benches showed there isn't
a significant performance impact.

* Add more memory-related test coverage, use slab allocator for callstatus

* Add the stubbed Android support

This hasn't been tested on a real Android device, but if it doesn't work
for someone we can deal with it then.

* Give more room on the timing based start

* Try to fix historically flaky test

* Add a script for nice markdown text

* Code review changes, prep for release.